feat(web): add no-JavaScript locale switching fallback via ?lang= query parameter
Server hook and preview server now intercept ?lang=, persist the locale
cookie, and redirect to the localized path. LocaleSwitcher renders real
<a> links with ?lang= in route mode so switching works without hydration
(needed for Telegram WebView CSP constraints). Static public pages and
site.js enhancement are updated to emit ?lang= switcher URLs. Also fixes
README Telegram link to point directly to t.me and expands the dependency
update backlog with major version jumps and Svelte 4→5 migration tasks.